--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Temperature Calculator</h1>
     <hr>
     <h2>Input</h2>
-    <p>Please enter temperature in Farenheit:</p>
+    <p>Please enter temperature in Fahrenheit:</p>
     <p>Temperature (F): <input id="num1" type="number"></p>
 
 <p><button id="calc-btn">Calculate Area</button></p>
